--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   },
   "homepage": "",
   "wiki": "https://github.com/nevakee716/FilterByContextualAssociation/wiki",
-  "evolve-version": "3.1"
+  "evolve-version": "3.1-4.1"
 }
